<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Register"
            android:background="@drawable/bg_design"
            android:textColor="@color/colorWhite"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_weight="9"
        android:padding="10dp"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:inputType="text"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:hint="@string/ID"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/idText"
                android:drawableLeft="@drawable/ic_person_pin"
                android:layout_marginRight="10dp" />
            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@color/colorBlack"
                android:text="@string/Double_check"
                android:layout_gravity="center"
                android:id="@+id/validateButton"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <EditText
            android:inputType="textPassword"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/Password"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/bg_edittext"
            android:id="@+id/passwordText"
            android:drawableLeft="@drawable/ic_lock"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:inputType="number"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/Date_of_birth"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/bg_edittext"
            android:id="@+id/birthdayText"
            android:drawableLeft="@drawable/ic_cake"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:inputType="number"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/Student_ID"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/bg_edittext"
            android:id="@+id/classText"
            android:drawableLeft="@drawable/ic_fiber_pin"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/Name"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/bg_edittext"
            android:id="@+id/nameText"
            android:drawableLeft="@drawable/ic_person"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:inputType="numberDecimal"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/Phone_number"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/bg_edittext"
            android:id="@+id/phoneText"
            android:drawableLeft="@drawable/ic_phone_android"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/Email"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/bg_edittext"
            android:id="@+id/emailText"
            android:drawableLeft="@drawable/ic_email"
            android:layout_marginTop="10dp"
            />

        <RadioGroup
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/genderGroup"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/genderWoman"
                android:layout_weight="1"
                android:checked="true"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/genderMan"
                android:layout_weight="1"
                android:checked="true"/>
        </RadioGroup>

        <Spinner
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/majorSpinner"> </Spinner>

        <Button
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@color/colorBlack"
            android:text="@string/Sign_up"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:id="@+id/registerButton"/>

    </LinearLayout>
</LinearLayout>