<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kyo.Introduction">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Introduction"
            android:background="@drawable/bg_design"
            android:textColor="@color/colorWhite"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/i_1489054"
            android:id="@+id/img"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_gon"
            android:id="@+id/t1_1"
            android:layout_toRightOf="@+id/img"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_gon_phone"
            android:layout_below="@+id/t1_1"
            android:id="@+id/t1_2"
            android:layout_toRightOf="@+id/img"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_gon_email"
            android:layout_below="@+id/t1_2"
            android:id="@+id/t1_3"
            android:layout_toRightOf="@+id/img"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/i_1489010"
            android:id="@+id/img2"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_seok"
            android:id="@+id/t2_1"
            android:layout_toRightOf="@+id/img2"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_seok_phone"
            android:layout_below="@+id/t2_1"
            android:id="@+id/t2_2"
            android:layout_toRightOf="@+id/img2"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_seok_email"
            android:layout_below="@+id/t2_2"
            android:layout_toRightOf="@+id/img2"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/i_1489050"
            android:id="@+id/img3"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_kyo"
            android:id="@+id/t3_1"
            android:layout_toRightOf="@+id/img3"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_kyo_phone"
            android:layout_below="@+id/t3_1"
            android:id="@+id/t3_2"
            android:layout_toRightOf="@+id/img3"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/introduction_kyo_email"
            android:layout_below="@+id/t3_2"
            android:layout_toRightOf="@+id/img3"/>

    </RelativeLayout>


</TableLayout>