<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_design"
    android:id="@+id/activity_login"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_school"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/ID"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordText"
        android:drawableRight="@drawable/ic_eye"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/idText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:background="@drawable/bg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        android:text="@string/Login"
        android:textColor="@color/details_medium"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/details_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />
    
    <View
        android:id="@+id/layout_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to Pai Chai University website"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@+id/layout_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

<!--android:background="@color/colorWhite" 비밀번호 아이디 이미지뷰 -->