<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/bg_design"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="5dp"
        android:src="@drawable/ic_school"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorWhite"
        android:gravity="center">

        <view
            android:id="@+id/youtubeView"
            class="com.google.android.youtube.player.YouTubePlayerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="6.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/person1"
                    android:text="@string/Sanggon"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/person2"
                    android:text="@string/Ilkyo_Yoon"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/person3"
                    android:text="@string/Youngseok_Kim"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/person4"
                    android:text="@string/Introduction"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

    </GridLayout>
</LinearLayout>